--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -3,8 +3,8 @@
     width:400px;
     position:fixed;
     border:#ebebeb solid 1px;
-    height:280px;
-    top:50%;
+    height:310px;
+    top:45%;
     left:55%;
     background:#ffffff;
     /*box-shadow:0px 0px 20px #ddd;*/
@@ -15,8 +15,8 @@
 }
 .login-title{
     width:100%;
-    margin-top: 25px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 35px;
     text-align:center;
     line-height:40px;
     height:40px;
@@ -64,6 +64,7 @@
 }
 
 .login-avatar {
+    padding-top: 14px;
     padding-left: 45px;
 }
 
